[build-system]
requires = [
    "setuptools >= 66.0.0",
    "pip >= 22.3.1",
    "wheel >= 0.38.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "rocketleaderboard"
dynamic = ["version"]
requires-python = ">= 3.12"
description = 'Simple Rocket League leaderboard'
dependencies = [
    "aiohttp",
    "typing_extensions",
]

[project.scripts]

[tool.setuptools.dynamic]
version = {file = "build/VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = [
    "rocketleaderboard*",
]

